first trial of reddit API

--- a/html/css/topic-one.html
+++ b/html/css/topic-one.html
@@ -60,6 +60,6 @@
     <div id="image-container">
       <img src="elements/40klogo.png" alt="Logo was gonna be here...">
     </div>    
-    <script src="topic-one.js"></script>
+    <script src="reddit.js"></script>
   </body>
 </html>
